--- a/components/GateTable.module.css
+++ b/components/GateTable.module.css
@@ -174,11 +174,13 @@
   .gateCol {
     width: 60px !important;
     min-width: 60px !important;
+    max-width: 60px !important;
   }
 
   .scrollCol {
     width: 60px !important;
     min-width: 60px !important;
+    max-width: 60px !important;
   }
 
   .gateBadge {
